--- a/public/join.html
+++ b/public/join.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>chaey</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/enderkingj/gimkit-clone/public/favicon.ico" type="image/x-icon"/>
   <style>
     body, html {
       background: #313f8c;
