css broken again

--- a/public/game.html
+++ b/public/game.html
@@ -39,10 +39,10 @@
     <button id="clap" class="clap-button">Clap</button>
   </div>
   <div class="shop shopp" id="shop">
-    <button class="shbutton" id="perquestionopen">Money Per Question</button>
-    <button class="shbutton" id="streakbonusopen">Streak Bonus</button>
-    <button class="shbutton" id="multiplieropen">Multiplier</button>
-    <button class="shbutton" id="insuranceopen">Insurance</button>
+    <button class="shbutton e1" id="perquestionopen">Money Per Question</button>
+    <button class="shbutton e2" id="streakbonusopen">Streak Bonus</button>
+    <button class="shbutton e3" id="multiplieropen">Multiplier</button>
+    <button class="shbutton e4" id="insuranceopen">Insurance</button>
   </div>
 
   <div class="streakbonusshop shopp" id="streakbonusshop">
