--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,13 @@
     </form>
     </div>
     <div id="hostdiv" style="display: none;">
-    <form id="songf">
+    <form id="quizf">
+        <select id="quiz" name="quiz">
+          
+        </select>
+    <input type="submit" value="Join"><br>
+    </form>
+    <form id="songf" style="display: none;">
         <select id="song" name="song">
             <option value="">Select a Song</option>
             <option value="thanos">Thanos</option>
