not even gonn a try..

--- a/public/game.html
+++ b/public/game.html
@@ -92,6 +92,7 @@
   <div class="powerups shopp" id="powerups">
     <button class="shopbutton" style="background: orange" onclick="powerup('summersong', 200)">Summer Song - $200</button>
     <button class="shopbutton" style="background: #ffeb3b" onclick="powerup('streaksaver', 500)">Streak Saver (90s) - $500</button>
+    <button class="shopbutton" style="background: #ffeb3b" onclick="powerup('claps', 250)">Clap Multiplier (x10) - $250</button>
   </div>
 
   <div class="after-end">
@@ -121,7 +122,7 @@
   <script defer src="/main.js"></script>
   <script defer src="/game.js"></script>
   <script defer src="/shop.js"></script>
-  <script defer src="/powerup.js"></script>
+  <script src="/powerup.js"></script>
   <script src='/lodash.js'></script>
 </body>
 </html>
