A LOT OF VERY COOL THINGS

--- a/public/game.html
+++ b/public/game.html
@@ -18,10 +18,12 @@
   <button class="shopbtn shobutton s1"><b>Shop</b></button>
   </div>
   <div class="incorrect" style="display: none;">
+  <h1 id="correct-answer"><b>0</b></h1>
   <h1 id="after-question-loss"><b>$0</b></h1>
   <button class="continue cobutton s2"><b>Continue</b></button><br>
   <button class="shopbtn shobutton s1"><b>Shop</b></button>
   </div>
+  <div id="leaderboard"></div>
   <div class="before-start" id="before-start">
     <center>
   <div class="sk-folding-cube">
@@ -91,7 +93,7 @@
 
   <div class="powerups shopp" id="powerups">
     <button class="shopbutton" style="background: orange" onclick="powerup('summersong', 200)">Summer Song - $200</button>
-    <button class="shopbutton" style="background: #ffeb3b" onclick="powerup('streaksaver', 500)">Streak Saver (90s) - $500</button>
+    <button class="shopbutton" style="background: #f04b26" onclick="powerup('streaksaver', 500)">Streak Saver (90s) - $500</button>
     <button class="shopbutton" style="background: #ffeb3b" onclick="powerup('claps', 250)">Clap Multiplier (x10) - $250</button>
   </div>
 
