--- a/public/host.html
+++ b/public/host.html
@@ -19,10 +19,9 @@
     <h1 id="usercount">0 Players</h1>
     <button class="start-button" id="startbutton">Start</button></div>
   </div>
-  <div id="after-start-main" style="display: none;">
-    <div class="navbar"></div>
+  <div id="after-start-main" style="display: none;padding-top: 0;">
+    <div class="navbar"><h1 id="title2"><span id="gimkit-font-join-large">Gimkit</span><span id="gimkit-font-join-space-small"></span><span id="gimkit-font-join-small">Clone</span></h1><h1 class="total-money" id="total-money">$0</h1></div>
     <button id="g-end">End Game</button>
-    <h1 class="total-money" id="total-money">$0</h1>
     <h1 id="timer">10:00</h1>
     <div id="leaderboard">
     </div>
