--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
         <select id="quiz" name="quiz">
           
         </select>
-    <input type="submit" value="Join"><br>
+    <input type="submit" value="Join"><br><br>
+        <a href="/create" target="_blank" style="color:white;"><b>Want to Make Your Own Quiz?</b></a>
     </form>
     <form id="songf" style="display: none;">
         <select id="song" name="song">
